	Polvorin again!

	* src/mod_announce.erl (get_stored_motd):
	exmpp_xml:get_element_by_name/2 is deprecated; use
	exmpp_xml:get_element/2 instead.

	* src/mod_echo.erl: In #jid, when the node isn't specified, it
	defaults to the atom "undefined", not an empty binary. Fix a bug where
	we expected an #xmlelement to have only one #xmlcdata child.

2008-10-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_offline_odbc.erl, src/mod_vcard_odbc.erl,
	src/mod_roster_odbc.erl: Fix multiple bugs in ODBC mods, thanks to
	Pablo Polvorin!

2008-09-29  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/jlib.erl (parse_xdata_submit, parse_xdata_fields): Fix a bug
	where exmpp_xml:get_attribute_from_list/3 was called with only 2
	arguments; this code has not been updated when exmpp_xml's API
	changed...

	* src/mod_disco.erl: Remove compatilibity code.

	* src/ejabberd_c2s.erl: When the status is not specified in a presence
	stanza, default to an empty binary, not an empty string; this is what
	mod_last expects.

	* src/mod_last.erl: Add try/catch block around
	exmpp_stringprep:*prep/1 uses. Add table conversion.
	(get_last): Do not convert status to binary because it's already one.

	* src/mod_adhoc.erl: Remove compatibility code (not tested yet).

	* src/mod_shared_roster.erl: Convert to exmpp (not tested yet).

	* src/mod_roster.erl (push_item), src/mod_roster_odbc.erl (push_item):
	Fix a bug in #xmlel construction: children must be a list.

	* src/ejabberd_receiver.erl: Add the {autoload_known, true} flag to
	the XML parser options. This allows modules to extend the known
	nss/names/attrs with their own data.

	* src/mod_configure2.erl: Fill exmpp_xml known list with the
	nss/names/attrs used by this module.

2008-09-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/jlib.erl (timestamp_to_xml): Create an #xmlel element, not an
	old #xmlelement.

	* src/mod_offline.erl: Remove any compatibility code: the core of